--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.6'
 services:
 
   nginx:
-    image: nginx:alpine
+    image: nginx:1.9.12
     container_name: nginx-balancer
     restart: always
     ports:
@@ -14,7 +14,10 @@ services:
       - us-server-2
       - common-server
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/config/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/GeoIP:/etc/nginx/GeoIP
+#      - ./nginx/modules:/usr/lib/nginx/modules
+#      - ./nginx/modules:/etc/nginx/modules
 
   uk-server:
     container_name: uk-server
