--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -16,8 +16,8 @@ http {
     geoip_country /etc/nginx/GeoIP/GeoIP.dat;
 
     map $geoip_country_code $upstream {
-#         UK web_uk;
-#         US web_us;
+        UK web_uk;
+        US web_us;
         default web_us;
     }
 
